# sentinel-soil

./: .gitignore  FEATURE_ENGINEERING.md  README.md  bare_soil_aggregate_pixels.py  explore_data.py  extract_point_patch.py  extract_time_series.py  ingest_raw.py  main.py  path_to_dataframe.py  prep_seed_dataset.py  pyproject.toml  run_seeds_batch.py  workflow_orchestrator.py
configs/: dev.yaml
sentinel_soil/: config.py
sentinel_soil/clients/: auth.py  evalscript_builder.py  process_client.py  sentinelhub_client.py
sentinel_soil/features/: feature_engineering.py
sentinel_soil/io/: raster_to_dataframe.py  storage.py
sentinel_soil/utils/: geometry.py  sentinelhub_io.py
worflows/: explore_raw.py  ingest_raw.py
